language/move-lang/tests/move_check/translated_ir_tests/move/commands/abort_negative_stack_size.exp
error: 

   ┌── tests/move_check/translated_ir_tests/move/commands/abort_negative_stack_size.move:6:1 ───
   │
 6 │ }
   │ ^ Unexpected '}'
   ·
 6 │ }
   │ - Expected an expression term
   │

